# gpu-praktikum

./: .AsteroidsScene.h.swp  AsteroidsScene.cpp  AsteroidsScene.h  CMakeLists.txt  LICENSE  Main.cu  MainWindow.cu  MainWindow.h  README.md  main.cu  res.qrc
cmake/: FindSDL2_IMAGE.cmake
src/: AsteroidsScene.cpp  AsteroidsScene.h  Main.cpp
src/app/: CreateForceFieldDialog.cpp  CreateForceFieldDialog.h  GuiMainWindow.cpp  GuiMainWindow.h  Main.cpp
src/cuda/: physics.cu  physics_v1.cu  physics_v2.cu  physics_v3.cu
src/data/: data.h
src/mess/: CPU.cpp  Main.cpp  MessSaver.cpp  MessSaver.h
src/ui/: ForceFieldDialog.ui  MainWindow.ui
src/widgets/: AsteroidPixmapItem.cpp  AsteroidPixmapItem.h  AsteroidsScene.cpp  AsteroidsScene.h  ForceFieldPixmapItem.cpp  ForceFieldPixmapItem.h  MassSlider.cpp  MassSlider.h
ui/: MainWindow.ui
